# AccountVerifier

./: Cargo.toml  accounts.txt  html.html  output_accounts.txt  verified.txt
src/: main.rs
