[package]
name = "accountverifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
fantoccini = { version = "0.19.3", features = ["rustls-tls"]}
futures = "0.3.28"
rand = "0.8.5"
tokio = { version = "1.29.1", features = ["full"] }
